@@ -17,13 +17,19 @@ Si estás en Mac o Linux, podés saltear este paso.
 
 ## JDK: Java Development Kit
 
-Primero instalaremos el compilador de Java. Ingresamos a [esta dirección](https://www.oracle.com/technetwork/java/javase/downloads/index.html), y descargamos la versión **Java SE 8u201 / Java SE 8u202**
+Primero instalaremos el compilador de Java. Ingresamos a [esta dirección](https://jdk.java.net/java-se-ri/11), y descargamos la **Open JDK 11**, que a partir del 2020 es la versión oficial que vamos a manejar y cuya licencia es [GPL](https://es.wikipedia.org/wiki/GNU_General_Public_License). 
 
-Si querés descargarte la **Java SE 11.0.2(LTS)** (la JDK 1.11), podés hacerlo en tu entorno local aunque el resto de las herramientas trabajarán con Java 8.
+Como alternativa, en caso de tener algún inconveniente, tenés [este sitio de descarga](https://www.oracle.com/technetwork/java/javase/downloads/index.html) de la versión **Java SE 11 (LTS)**, pero hay que tener en cuenta que no es un software libre, sino propiedad de Oracle.
 
 ### Pasos de instalación
 
-El tutorial más completo para instalarlo en tu sistema operativo está en [esta página](https://www3.ntu.edu.sg/home/ehchua/programming/howto/JDK_Howto.html). Utilizá en tu caso el número de la versión de Java que hayas descargado.
+Una vez descargado el binario en una carpeta (supongamos que es `C:\jdk11`), hay que configurar dos variables de entorno de tu sistema operativo:
+
+- JAVA_HOME: tiene que apuntar a `C:\jdk11`)
+- PATH: hay que incorporarle `C:\jdk11\bin` (cuidando de no borrar lo que ya está)
+
+Te dejamos [un video que explica cómo hacerlo para Windows](https://www.youtube.com/watch?v=Cr_mwn67kFs) (el procedimiento es similar para MacOS / Linux)
+
 
 ### Chequeos posteriores a la instalación
 
@@ -32,9 +38,7 @@ El tutorial más completo para instalarlo en tu sistema operativo está en [esta
 
 ### JDK sí, JRE no
 
-> **IMPORTANTE:** tenés que instalar una JDK, no una JRE (Java Runtime Environment) que solo te permite ejecutar programas Java ya compilados
-
-Para saber si tenés una JDK, deberías ir al directorio de instalación y en la carpeta `bin` debe estar un programa llamado `javac`, que es el compilador de Java.
+> **IMPORTANTE:** tenés que instalar una JDK, no una JRE (Java Runtime Environment) que solo te permite ejecutar programas Java ya compilados. Para saber si tenés una JDK, deberías ir al directorio de instalación y en la carpeta `bin` debe estar un programa llamado `javac`, que es el compilador de Java.
 
 ![image](/img/languages/jdkVsJre.png)
 
@@ -46,7 +50,7 @@ Nuestro entorno integrado de desarrollo (IDE) permite que en una misma herramien
 
 ### Pasos de instalación
 
-Tenés que descargarlo desde [esta página](https://www.eclipse.org/downloads/) utilizando el link **Get Eclipse IDE 2018‑12**
+Tenés que descargarlo desde [esta página](https://www.eclipse.org/downloads/) utilizando el link **Get Eclipse IDE 2019‑12**
 
 > **NOTA:** si tu intención es descargar el Eclipse IDE 2018-12 y en la página principal lo han reemplazado por otro entorno que tu profesor descartó, podés visitar [la página histórica de descarga de Eclipses anteriores](https://wiki.eclipse.org/Older_Versions_Of_Eclipse)
 
@@ -62,17 +66,32 @@ Por lo general no es necesario hacer nada más, pero en caso de necesitarlo, en 
 
 - la memoria inicial con la que levanta Eclipse: `Xms`
 - la memoria máxima que puede ser utilizada para Eclipse, que corre en una Virtual Machine de Java propia: `Xmx`. Por defecto viene con 1GB y para las necesidades de la materia no deberías tener que subirlo, pero en todo caso charlalo con tu docente favorito.
-- cuál es la versión de Java requerida (por defecto es 1.8 y no debería ser necesario modificarla)
-- cuál es la ubicación donde está el ejecutable de Java: es importante que apunte a una JDK y no a una JRE, como hemos comentado en la instalación de la JDK. Si por defecto instalaste una JRE, tu Eclipse no será capaz de compilar, recomendamos volver a la página JDK y reinstalar Java. De la misma manera, una JDK 1.9 ó superior si tu intención es usar la 1.8 causará conflictos extraños. Asegurate de que estén sincronizadas la JDK 1.8 que instalaste y la que Eclipse quiere usar.
+- cuál es la versión de Java requerida (por defecto es 1.11 y no debería ser necesario modificarla)
+- cuál es la ubicación donde está el ejecutable de Java: es importante que apunte a una JDK y no a una JRE, como hemos comentado en la instalación de la JDK. Si por defecto instalaste una JRE, tu Eclipse no será capaz de compilar, recomendamos volver a la página JDK y reinstalar Java. De la misma manera, la JDK a la que apunte Eclipse debería ser la misma que vos instalaste: asegurate de que estén sincronizadas.
+
+A continuación te dejamos un archivo `.ini` de ejemplo, ignorando las primeras líneas:
 
 ```ini
+...
+--launcher.appendVmargs
 -vm
-/usr/lib/jvm/java-8-oracle/jre/bin
+/usr/lib/jvm/java-11-openjdk-amd64/bin
 -vmargs
--Dosgi.requiredJavaVersion=1.8
--Xms256m
--Xmx1024m
+-Dosgi.instance.area.default=@user.home/eclipse-workspace
+-XX:+UseG1GC
+-XX:+UseStringDeduplication
+--add-modules=ALL-SYSTEM
+-Dosgi.requiredJavaVersion=1.11
+-Dosgi.dataAreaRequiresExplicitInit=true
+-Xms512m
+-Xmx1768m
+--add-modules=ALL-SYSTEM
+-Declipse.p2.max.threads=10
+-Doomph.update.url=http://download.eclipse.org/oomph/updates/milestone/latest
+-Doomph.redirection.index.redirection=index:/->http://git.eclipse.org/c/oomph/org.eclipse.oomph.git/plain/setups/
 ```
+
+En el ejemplo estamos configurando una memoria inicial de 512 MB y una memoria máxima de 1768 MB, una JDK 1.11 requerida. El resto son valores por defecto que te va a crear el instalador de Eclipse.
 
 ## Maven
 
@@ -83,11 +102,12 @@ Seguí los pasos de instalación de [esta página](guia-de-instalacion-de-maven.
 Instalá el plugin de Xtend desde el Update Site, siguiendo estos pasos:
 
 - En el menú de Eclipse, Help &gt; Install New Software ... botón Add
-- En la ventana de diálogo Add Repository, en el nombre escribir algo como "Xtend Plugin" y en Location copiar esta URL: http://download.eclipse.org/modeling/tmf/xtext/updates/releases/
-- A partir del 2019 se estará usando la versión 2.17.0 que es la última al 01/03, en caso de que vayan saliendo nuevas versiones, se puede elegir qué versión instalar destildando la opción "Show only the latest versions of available software" (más abajo está resaltado en la imagen)
+- En la ventana de diálogo Add Repository, en el nombre escribir algo como "Xtend Plugin" y en Location copiar esta URL: [http://download.eclipse.org/modeling/tmf/xtext/updates/milestones/](http://download.eclipse.org/modeling/tmf/xtext/updates/milestones/)
+
+- A partir del 2020 se estará usando la versión **2.21**, en caso de que vayan saliendo nuevas versiones, se puede elegir qué versión instalar destildando la opción "Show only the latest versions of available software" (más abajo está resaltado en la imagen)
 - Seleccionar el check Xtext, y luego Xtend IDE, hacer click en Next y luego en Finish
 
-![image](/img/languages/xtend-install.png)
+![image](/img/wiki/Xtend-install-2020.png)
 
 - Reiniciar el Eclipse
 
